--- a/app/css/main.css
+++ b/app/css/main.css
@@ -739,13 +739,11 @@ a {
   cursor: pointer;
   outline: none;
   color: #000; }
+  .header-nav-list-item-ul-side-ul-item svg path {
+    stroke-width: 1px; }
   .header-nav-list-item-ul-side-ul-item:hover {
     text-decoration: underline;
     color: #D71921; }
-    .header-nav-list-item-ul-side-ul-item:hover .header-nav-list-item-ul-side-ul-item__icon svg path {
-      stroke: #D71921; }
-    .header-nav-list-item-ul-side-ul-item:hover .header-nav-list-item-ul-side-ul-item__icon svg .svg-transparent {
-      stroke: #444; }
   .header-nav-list-item-ul-side-ul-item .transformed svg {
     -webkit-transform: translateX(-50%);
         -ms-transform: translateX(-50%);
@@ -3561,8 +3559,7 @@ a {
 
 #slider-range-cost .ui-slider-handle, #slider-range-width .ui-slider-handle {
   background: #FFFFFF;
-  -webkit-box-shadow: 0px 7px 20px rgba(34, 35, 40, 0.4);
-  box-shadow: 0px 7px 20px rgba(34, 35, 40, 0.4);
+  border: 1px solid #bebebe;
   -webkit-border-radius: 50%;
   border-radius: 50%;
   outline: none;
