--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -757,19 +757,24 @@ a {
   cursor: pointer;
   outline: none;
   color: #000;
+  svg {
+    path {
+      stroke-width: 1px;
+    }
+  }
   &:hover {
     text-decoration: underline;
     color: #D71921;
-    .header-nav-list-item-ul-side-ul-item__icon {
-      svg {
-        path {
-          stroke: #D71921;
-        }
-        .svg-transparent {
-          stroke: #444;
-        }
-      }
-    }
+    // .header-nav-list-item-ul-side-ul-item__icon {
+    //   svg {
+    //     path {
+    //       stroke: #D71921;
+    //     }
+    //     .svg-transparent {
+    //       stroke: #999;
+    //     }
+    //   }
+    // }
   }
   .transformed {
       svg{
@@ -3963,8 +3968,7 @@ a {
 
 #slider-range-cost .ui-slider-handle, #slider-range-width .ui-slider-handle {
   background: #FFFFFF;
-  -webkit-box-shadow: 0px 7px 20px rgba(34, 35, 40, 0.4);
-  box-shadow: 0px 7px 20px rgba(34, 35, 40, 0.4);
+  border: 1px solid #bebebe;
   -webkit-border-radius: 50%;
   border-radius: 50%;
   outline: none;
