--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1329,8 +1329,11 @@ a {
 }
 
 .in-work-item__img {
-  height: 70px;
+  height: 90px;
   margin-bottom: 28px;
+  img {
+    height: 100%;
+  }
 }
 
 .in-work-item__text {
